staging/server-staging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
     annotations:
          kompose.cmd: kompose --file deploy.yaml convert
          kompose.version: 1.21.0 ()
     creationTimestamp: null
     labels:
          io.kompose.service: server
     name: server
     namespace: ingress-nginx
spec:
     replicas: 1
     selector:
          matchLabels:
               io.kompose.service: server
     strategy: {}
     template:
          metadata:
               annotations:
                    kompose.cmd: kompose --file deploy.yaml convert
                    kompose.version: 1.21.0 ()
               creationTimestamp: null
               labels:
                    io.kompose.service: server
          spec:
               containers:
                    - args:
                           - npm
                           - start
                           - server.js
                      image: gcr.io/quirkshop-1585189206879/server:v0.33
                      imagePullPolicy: Always
                      name: server
                      ports:
                           - containerPort: 5000
                      resources: {}
               restartPolicy: Always
               serviceAccountName: ""
               volumes: null
status: {}
