staging/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: quirkshop-nginx-ingress-staging
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"

    ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.org/server-snippet: "proxy_ssl_verify off;"
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    # # # letsencrypt support enabled (https://github.com/jetstack/kube-lego)
    kubernetes.io/tls-acme: "true"
    # # use the Kubernetes ingress "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/websocket-services: heidi
    nginx.org/websocket-services: "heidi, janus"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
    cert-manager.io/acme-challenge-type: dns01
    # nginx.ingress.kubernetes.io/secure-backends: "true"
    # nginx.ingress.kubernetes.io/server-snippet: |-
    #   location /graphql {

    #       allow 10.0.1.103;   # Pod address range
    #       deny all;

    #       proxy_http_version 1.1;
    #       proxy_redirect off;
    #       proxy_intercept_errors on;
    #       proxy_set_header Connection "";
    #       proxy_set_header X-CF-Visitor $http_cf_visitor;
    #       proxy_set_header Host $host;
    #       proxy_set_header X-Real-IP $remote_addr;
    #       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
    #       proxy_set_header X-Forwarded-Host $host;
    #       proxy_set_header X-Forwarded-Port $server_port;
    #       proxy_set_header X-Forwarded-Proto $scheme;
    #       proxy_pass http://10.0.6.169;
    #   }

    # kubernetes.io/ingress.allow-http: "true"
    # nginx.ingress.kubernetes.io/server-alias:  www.quirkshop.org
    # kubernetes.io/ingress.class: "public"
    # nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/default-backend: client
spec:
  backend:
    serviceName: client
    servicePort: 80
  tls:
    - hosts:
        - staging.quirkshop.org
      secretName: staging-ssl
  rules:
    - host: staging.quirkshop.org
      http:
        paths:
          - path: /
            backend:
              serviceName: client
              servicePort: 80
          - path: /graphql
            backend:
              serviceName: server
              servicePort: 5000
          - path: /socket
            backend:
              serviceName: heidi
              servicePort: 4000
          - path: /janus
            backend:
              serviceName: janus
              servicePort: 8188
          - path: /webhook
            backend:
              serviceName: server
              servicePort: 5000
